--- a/app/src/main/res/layout/activity_emailverification.xml
+++ b/app/src/main/res/layout/activity_emailverification.xml
@@ -22,11 +22,26 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteY="121dp"
         android:id="@+id/textView3"
         app:layout_constraintLeft_toLeftOf="parent"
         android:text="We need to verify that you entered a valid UCSB Umail address. Please check your inbox for instructions on how to verify your email. Once it is verified, click the login button below."
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginEnd="16dp"
+        app:layout_constraintHorizontal_bias="0.23"
+        android:layout_marginTop="48dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <Button
+        android:text="Log in"
+        android:layout_width="227dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/verification_login"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        android:onClick="verifLoginBtnClicked" />
 </android.support.constraint.ConstraintLayout>
