--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -28,15 +28,12 @@
         android:layout_marginBottom="8dp" />
 
     <Button
-        android:text="terms of service"
+        android:text="Info"
         android:layout_width="230dp"
         android:layout_height="wrap_content"
         android:id="@+id/intro_info"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="85dp"
-        android:onClick="sendMessage"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:layout_marginBottom="85dp" />
 </android.support.constraint.ConstraintLayout>
