--- a/app/src/main/res/layout/activity_giftexchange.xml
+++ b/app/src/main/res/layout/activity_giftexchange.xml
@@ -44,7 +44,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom">
+        android:layout_gravity="bottom"
+        tools:alpha="1">
         <View
             android:layout_width="match_parent"
             android:layout_height="4dp"
