--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -179,7 +179,9 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom">
+        android:layout_gravity="bottom"
+        tools:alpha="1"
+        android:background="@android:color/white">
         <View
             android:layout_width="match_parent"
             android:layout_height="4dp"
