--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -32,6 +32,7 @@
         android:layout_width="230dp"
         android:layout_height="wrap_content"
         android:id="@+id/intro_info"
+        android:onClick="sendMessage"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
