--- a/app/src/main/res/layout/activity_giftexchange.xml
+++ b/app/src/main/res/layout/activity_giftexchange.xml
@@ -8,58 +8,46 @@
     android:layout_height="match_parent"
     tools:context="com.cs48.g12.gauchogifts.giftexchange">
 
-    <TextView
-        android:text="Title"
-        android:layout_width="wrap_content"
-        android:id="@+id/geTitle"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteY="33dp"
-        tools:layout_editor_absoluteX="178dp" />
-
-    <TextView
-        android:text="Deadline"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:id="@+id/geDeadline"
-        android:layout_marginStart="16dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/geTitle" />
-
-    <TextView
-        android:text="Description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/geDescripton"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/geDeadline" />
-
-    <FrameLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        tools:alpha="1">
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="4dp"
-            android:layout_gravity="top"
-            android:background="@drawable/shadow"
-            />
+        android:layout_height="match_parent">
 
-        <android.support.design.widget.BottomNavigationView
-            android:id="@+id/bottomNavigationView"
-            android:layout_width="match_parent"
+        <TextView
+            android:text="Title"
+            android:layout_width="wrap_content"
+            android:id="@+id/geTitle"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            design:menu="@menu/menu_navigation"
-            />
-    </FrameLayout>
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:text="Deadline"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:id="@+id/geDeadline"
+            android:layout_marginStart="16dp"
+            tools:layout_constraintLeft_creator="1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/geTitle"
+            android:layout_marginTop="32dp" />
+
+        <TextView
+            android:text="Description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/geDescripton"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/geDeadline" />
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.design.widget.CoordinatorLayout>
