join exchanges button needs database writing code

--- a/app/src/main/res/layout/tab2joinexchange.xml
+++ b/app/src/main/res/layout/tab2joinexchange.xml
@@ -9,8 +9,18 @@
     tools:context="com.cs48.g12.gauchogifts.navheader$PlaceholderFragment">
 
     <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:text="Join an exchange"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/yourExchanges" />
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/yourExchanges"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="11dp"
+        android:id="@+id/allexchanges" />
 </RelativeLayout>
