--- a/app/src/main/res/layout/activity_giftexchange.xml
+++ b/app/src/main/res/layout/activity_giftexchange.xml
@@ -48,6 +48,15 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/geDeadline" />
+
+        <Button
+            android:text="Join Gift Exchange"
+            android:layout_width="368dp"
+            android:layout_height="wrap_content"
+            tools:layout_editor_absoluteX="8dp"
+            android:id="@+id/joinBtn"
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/geDescripton" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.design.widget.CoordinatorLayout>
