--- a/app/src/main/res/layout/tab4profile.xml
+++ b/app/src/main/res/layout/tab4profile.xml
@@ -36,34 +36,67 @@
                 tools:layout_editor_absoluteY="32dp" />
 
             <TextView
-                android:text="Add Photo"
+                android:text="Add/Change Photo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:id="@+id/addPhoto" />
 
-            <TextView
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:inputType="textPersonName"
-                android:ems="10"
-                android:id="@+id/profile_firstName"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/ProfPic"
-                app:layout_constraintRight_toRightOf="@+id/userImage"
-                android:layout_height="wrap_content"
-                android:hint="First Name" />
+                android:layout_height="match_parent">
 
-            <TextView
+                <TextView
+                    android:layout_width="250dp"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/profile_firstName"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/ProfPic"
+                    app:layout_constraintRight_toRightOf="@+id/userImage"
+                    android:layout_height="wrap_content"
+                    android:hint="First Name"
+                    android:layout_weight="0.44" />
+
+                <Button
+                    android:text="Edit"
+                    android:id="@+id/editName"
+                    android:textSize="10sp"
+                    android:textAlignment="center"
+                    android:layout_width="40dp"
+                    android:layout_weight="1"
+                    android:layout_height="40dp" />
+
+                <Button
+                    android:text="Save"
+                    android:id="@+id/saveName"
+                    android:textSize="10sp"
+                    android:textAlignment="center"
+                    android:layout_width="40dp"
+                    android:layout_weight="1"
+                    android:layout_height="40dp"
+                    />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:ems="10"
-                android:id="@+id/lastName"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/profile_firstName"
-                app:layout_constraintLeft_toLeftOf="@+id/userImage"
-                android:layout_marginBottom="20dp"
-                android:hint="Last Name" />
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="284dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/lastName"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/profile_firstName"
+                    app:layout_constraintLeft_toLeftOf="@+id/userImage"
+                    android:layout_marginBottom="20dp"
+                    android:hint="Last Name" />
+
+            </LinearLayout>
 
             <TextView
                 android:layout_width="match_parent"
@@ -84,14 +117,40 @@
                 android:ems="10"
                 android:id="@+id/credits" />
 
-            <TextView
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="text"
-                android:text="Address:"
-                android:textSize="20dp"
-                android:ems="10"
-                android:id="@+id/address" />
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:text="Address:"
+                    android:textSize="20dp"
+                    android:ems="10"
+                    android:id="@+id/address" />
+
+                <Button
+                    android:text="Edit"
+                    android:id="@+id/editAddress"
+                    android:textSize="10sp"
+                    android:textAlignment="center"
+                    android:layout_width="40dp"
+                    android:layout_weight="1"
+                    android:layout_height="40dp" />
+
+                <Button
+                    android:text="Save"
+                    android:id="@+id/saveAddress"
+                    android:textSize="10sp"
+                    android:textAlignment="center"
+                    android:layout_width="40dp"
+                    android:layout_weight="1"
+                    android:layout_height="40dp"
+                    />
+
+            </LinearLayout>
 
             <TextView
                 android:layout_height="wrap_content"
@@ -147,27 +206,51 @@
                 android:layout_marginLeft="50dp"
                 android:hint="Country" />
 
-            <TextView
-                android:text="Interests:"
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="20dp"
-                android:id="@+id/interests" />
+                android:layout_height="match_parent">
 
-            <TextView
+                <TextView
+                    android:id="@+id/interests"
+                    android:layout_width="214dp"
+                    android:layout_height="wrap_content"
+                    android:text="Interests:"
+                    android:textSize="20dp"
+                    android:layout_weight="1.17" />
+
+                <Button
+                    android:id="@+id/editInterests"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="0.41"
+                    android:text="Edit"
+                    android:textAlignment="center"
+                    android:textSize="10sp" />
+
+                <Button
+                    android:text="Save"
+                    android:id="@+id/saveInterests"
+                    android:textSize="10sp"
+                    android:textAlignment="center"
+                    android:layout_width="40dp"
+                    android:layout_weight="0.34"
+                    android:layout_height="40dp"
+                    />
+
+
+
+            </LinearLayout>
+
+            <EditText
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:inputType="textMultiLine"
                 android:ems="10"
-                android:id="@+id/interestInput" />
+                android:id="@+id/interestInput"
+                android:gravity="top|left"
+                />
 
-            <Button
-                android:text="Done"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="50dp"
-                android:onClick="doneClick"
-                android:id="@+id/donebtn" />
 
         </LinearLayout>
     </ScrollView>
