--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -15,7 +15,7 @@
         tools:context="com.cs48.g12.gauchogifts.questions">
 
 
-        <TextView android:id="@+id/question1"
+        <TextView android:id="@+id/title"
 
             android:text="What is Gaucho Gifts?"
             android:textColor="#919191"
@@ -144,7 +144,7 @@
             android:textColor="#000000"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignTop="@+id/question1"
+            android:layout_alignTop="@+id/title"
             android:layout_alignParentStart="true"
             android:layout_marginTop="27dp" />
 
