--- a/app/src/main/res/layout/tab3help.xml
+++ b/app/src/main/res/layout/tab3help.xml
@@ -14,7 +14,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.cs48.g12.gauchogifts.navheader$PlaceholderFragment">
 
-    <TextView android:id="@+id/question1"
+    <TextView android:id="@+id/title"
         android:text="What is Gaucho Gifts?"
         android:textColor="#919191"
         android:textSize="16sp"
@@ -135,7 +135,7 @@
         android:textColor="#000000"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignTop="@+id/question1"
+        android:layout_alignTop="@+id/title"
         android:layout_alignParentStart="true"
         android:layout_marginTop="27dp" />
 
