--- a/app/src/main/res/layout/activity_giftexchange.xml
+++ b/app/src/main/res/layout/activity_giftexchange.xml
@@ -72,7 +72,7 @@
                 android:id="@+id/question1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Question 1"
+                android:text="Notes for your gifter"
                 android:textAlignment="center" />
 
             <EditText
