--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,4 +47,16 @@
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@+id/login_password"
         android:layout_width="230dp" />
+
+    <Button
+        android:id="@+id/forgotpassword"
+        android:layout_width="230dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Forgot password?"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_login" />
 </android.support.constraint.ConstraintLayout>
