--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,36 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <!-- Screens background color-->
+    <color name="bg_screen1">#3395ff</color>
+    <color name="bg_screen2">#3395ff</color>
+    <color name="bg_screen3">#3395ff</color>
+    <color name="bg_screen4">#3395ff</color>
+
+    <!-- dots inactive colors -->
+    <color name="dot_dark_screen1">#E0E0E0</color>
+    <color name="dot_dark_screen2">#E0E0E0</color>
+    <color name="dot_dark_screen3">#E0E0E0</color>
+    <color name="dot_dark_screen4">#E0E0E0</color>
+
+    <!-- dots active colors -->
+    <color name="dot_light_screen1">#FAFAFA</color>
+    <color name="dot_light_screen2">#FAFAFA</color>
+    <color name="dot_light_screen3">#FAFAFA</color>
+    <color name="dot_light_screen4">#FAFAFA</color>
+
+    <array name="array_dot_active">
+        <item>@color/dot_light_screen1</item>
+        <item>@color/dot_light_screen2</item>
+        <item>@color/dot_light_screen3</item>
+        <item>@color/dot_light_screen4</item>
+    </array>
+
+    <array name="array_dot_inactive">
+        <item>@color/dot_dark_screen1</item>
+        <item>@color/dot_dark_screen2</item>
+        <item>@color/dot_dark_screen3</item>
+        <item>@color/dot_dark_screen4</item>
+    </array>
 </resources>
