--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,9 +54,11 @@
         android:layout_height="50dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:textColor="#303F9F"
+        style="?android:attr/borderlessButtonStyle"
         android:text="Forgot password?"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_login" />
+        app:layout_constraintTop_toBottomOf="@+id/login_login"
+        tools:layout_editor_absoluteY="199dp"/>
 </android.support.constraint.ConstraintLayout>
