--- a/app/src/main/res/layout/tab4profile.xml
+++ b/app/src/main/res/layout/tab4profile.xml
@@ -67,15 +67,16 @@
                     <TextView
                         android:id="@+id/profile_firstName"
                         android:layout_width="178dp"
-                        android:layout_height="20dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="-19dp"
                         android:layout_marginTop="8dp"
                         android:layout_weight="0.44"
                         android:ems="10"
                         android:hint="First Name"
                         android:inputType="textPersonName"
+                        android:textSize="20sp"
                         app:layout_constraintRight_toRightOf="@+id/userImage"
-                        app:layout_constraintTop_toBottomOf="@+id/ProfPic"
-                        android:layout_marginRight="-19dp" />
+                        app:layout_constraintTop_toBottomOf="@+id/ProfPic" />
 
                     <Button
                         android:id="@+id/editName"
@@ -114,27 +115,29 @@
                 android:layout_height="match_parent">
 
                 <TextView
+                    android:id="@+id/lastName"
                     android:layout_width="284dp"
                     android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
-                    android:ems="10"
-                    android:id="@+id/lastName"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/profile_firstName"
-                    app:layout_constraintLeft_toLeftOf="@+id/userImage"
                     android:layout_marginBottom="20dp"
-                    android:hint="Last Name" />
+                    android:layout_marginTop="8dp"
+                    android:ems="10"
+                    android:hint="Last Name"
+                    android:inputType="textPersonName"
+                    android:textSize="20sp"
+                    app:layout_constraintLeft_toLeftOf="@+id/userImage"
+                    app:layout_constraintTop_toBottomOf="@+id/profile_firstName" />
 
             </LinearLayout>
 
             <TextView
+                android:id="@+id/credDisplay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:ems="10"
                 android:inputType="text"
                 android:text="Credits:"
                 android:textSize="20dp"
-                android:ems="10"
-                android:id="@+id/credDisplay" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/credits"
@@ -162,7 +165,8 @@
                         android:ems="10"
                         android:inputType="text"
                         android:text="Address:"
-                        android:textSize="20dp" />
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
 
                     <Button
                         android:id="@+id/editAddress"
@@ -196,58 +200,64 @@
             </LinearLayout>
 
             <TextView
-                android:layout_height="wrap_content"
-                android:inputType="textPostalAddress"
-                android:ems="10"
                 android:id="@+id/street1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:ems="10"
                 android:hint="Street"
-                android:layout_marginLeft="50dp"
-                android:layout_width="match_parent" />
+                android:inputType="textPostalAddress"
+                android:textSize="18sp" />
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPostalAddress"
-                android:ems="10"
                 android:id="@+id/street2"
-                android:layout_marginLeft="50dp"
-                android:hint="Street" />
-
-            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPostalAddress"
+                android:layout_marginLeft="50dp"
                 android:ems="10"
+                android:hint="Street"
+                android:inputType="textPostalAddress"
+                android:textSize="18sp" />
+
+            <TextView
                 android:id="@+id/City"
-                android:layout_marginLeft="50dp"
-                android:hint="City" />
-
-            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPostalAddress"
+                android:layout_marginLeft="50dp"
                 android:ems="10"
+                android:hint="City"
+                android:inputType="textPostalAddress"
+                android:textSize="18sp" />
+
+            <TextView
                 android:id="@+id/State"
-                android:layout_marginLeft="50dp"
-                android:hint="State" />
-
-            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPostalAddress"
+                android:layout_marginLeft="50dp"
                 android:ems="10"
+                android:hint="State"
+                android:inputType="textPostalAddress"
+                android:textSize="18sp" />
+
+            <TextView
                 android:id="@+id/Zip"
-                android:layout_marginLeft="50dp"
-                android:hint="Zip" />
-
-            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPostalAddress"
-                android:ems="10"
-                android:id="@+id/country"
                 android:layout_marginLeft="50dp"
-                android:hint="Country" />
+                android:ems="10"
+                android:hint="Zip"
+                android:inputType="textPostalAddress"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/country"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:ems="10"
+                android:hint="Country"
+                android:inputType="textPostalAddress"
+                android:textSize="18sp" />
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -265,7 +275,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1.17"
                         android:text="Interests:"
-                        android:textSize="20dp" />
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
 
                     <Button
                         android:id="@+id/editInterests"
