--- a/app/src/main/res/layout/window1.xml
+++ b/app/src/main/res/layout/window1.xml
@@ -15,7 +15,8 @@
 
         <ImageView
             android:layout_width="120dp"
-            android:layout_height="120dp" />
+            android:layout_height="120dp"
+            android:src="@drawable/tree"/>
 
         <TextView
             android:layout_width="wrap_content"
