--- a/app/src/main/res/layout/window2.xml
+++ b/app/src/main/res/layout/window2.xml
@@ -14,6 +14,7 @@
         <ImageView
             android:layout_width="120dp"
             android:layout_height="120dp"
+            android:src="@drawable/check"
             />
 
         <TextView
